--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/dashboard-icon-23662.gif">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Display Dashboard</title>
   </head>
   <body>
     <div id="app"></div>
